fix(slider.css): fixed horizontal scrolling issue

--- a/src/components/Carousel/Slider.css
+++ b/src/components/Carousel/Slider.css
@@ -1,6 +1,6 @@
 .container-slider {
     max-width: 100vw;
-	min-width: 100vw;
+	min-width: calc(100vw - 17px);
     height: 100vh;
     position: relative;
     overflow: hidden;
